Admin can add MaDeTai

--- a/views/admin/users-statistic.ejs
+++ b/views/admin/users-statistic.ejs
@@ -32,9 +32,9 @@
 		<!-- Logo -->
 		<a href="/admin" class="logo">
 			<!-- mini logo for sidebar mini 50x50 pixels -->
-			<span class="logo-mini"><b>M</b></span>
+			<span class="logo-mini"><b>A</b></span>
 			<!-- logo for regular state and mobile devices -->
-			<span class="logo-lg"><b>Manager</b></span>
+			<span class="logo-lg"><b>Admin</b></span>
 		</a>
 		<!-- Header Navbar: style can be found in header.less -->
 		<nav class="navbar navbar-static-top">
@@ -63,7 +63,7 @@
 			</h1>
 			<ol class="breadcrumb">
 				<li><a href="/home"><i class="fa fa-dashboard"></i> Trang chủ</a></li>
-				<li><a href="/manager">Quản lý</a></li>
+				<li><a href="/admin">Admin</a></li>
 				<li class="#">Thống kê tài khoản</li>
 			</ol>
 		</section>
