--- a/app/views/users/add-vegetable-form.template.html
+++ b/app/views/users/add-vegetable-form.template.html
@@ -86,11 +86,11 @@
 				</tr>
 				<tr>
 					<td>Chi <span class="has-required">(*)</span>:</td>
-					<td><input type="text" title="{{tooltips['chi']}}" name="chi" ng-model="data.chi" id="chi" class="input-form" required></td>
+					<td><input type="text" title="{{tooltips['chichiGiong']}}" name="chichiGiong" ng-model="data.chichiGiong" id="chichiGiong" class="input-form" required></td>
 				</tr>
 				<tr>
 					<td>Phân chi:</td>
-					<td><input type="text" title="{{tooltips['phanChi']}}" name="phanChi" ng-model="data.phanChi" id="phanChi" class="input-form"></td>
+					<td><input type="text" title="{{tooltips['phanChiPhanGiong']}}" name="phanChiPhanGiong" ng-model="data.phanChiPhanGiong" id="phanChiPhanGiong" class="input-form"></td>
 				</tr>
 				<tr>
 					<td>Loài (nếu có):</td>
@@ -374,15 +374,15 @@
 				<h3 class="h3-title">NHÓM DỮ LIỆU PHÂN TÍCH MẪU</h3>
 				<tr>
 					<td><label>33. Thời gian phân tích/giám định/định loại mẫu:</label></td>
-					<td><input type="text" class="input-form datepicker" title="{{tooltips['thoiGianPhanTich']}}" name="thoiGianPhanTich" ng-model="data.thoiGianPhanTich" ></td>
+					<td><input type="text" class="input-form datepicker" title="{{tooltips['thoiGianGiamDinh']}}" name="thoiGianGiamDinh" ng-model="data.thoiGianGiamDinh" ></td>
 				</tr>
 				<tr>
 					<td><label>34. Người phân tích/giám định/định loại mẫu <span class="has-required">(*)</span>:</label></td>
-					<td><input type="text" title="{{tooltips['nguoiPhanTich']}}" name="nguoiPhanTich" ng-model="data.nguoiPhanTich" class="input-form" required></td>
+					<td><input type="text" title="{{tooltips['nguoiGiamDinh']}}" name="nguoiGiamDinh" ng-model="data.nguoiGiamDinh" class="input-form" required></td>
 				</tr>
 				<tr>
 					<td><label>35. Cơ quan/tổ chức phân tích/giám định/phân loại mẫu <span class="has-required">(*)</span>:</label></td>
-					<td><input type="text" title="{{tooltips['coQuanToChucPhanTich']}}" name="coQuanToChucPhanTich" ng-model="data.coQuanToChucPhanTich" id="coQuanToChucPhanTich" class="input-form" required></td>
+					<td><input type="text" title="{{tooltips['coQuanToChucGiamDinh']}}" name="coQuanToChucGiamDinh" ng-model="data.coQuanToChucGiamDinh" id="coQuanToChucGiamDinh" class="input-form" required></td>
 				</tr>
 				<tr><td><label>36. Tài liệu phân tích/giám định/phân loại đi kèm <span class="has-required"> (*)</span>:</label></td></tr>
 				<tr>
@@ -440,7 +440,7 @@
 				</tr>
 				<tr>
 					<td>Thuộc tính xử lý chế tác </td>
-					<td><input type="text" title="{{tooltips['thuocTinhXuLy']}}" name="thuocTinhXuLy" ng-model="data.thuocTinhXuLy" class="input-form"></td>
+					<td><input type="text" title="{{tooltips['thuocTinhXuLyCheTac']}}" name="thuocTinhXuLyCheTac" ng-model="data.thuocTinhXuLyCheTac" class="input-form"></td>
 				</tr>
 				<tr>
 					<td>Phương thức xử lý chế tác:</td>
@@ -477,7 +477,7 @@
 				</tr>
 				<tr>
 					<td>Trình tự DNA</td>
-					<td><input type="file" multiple multiple accept=".doc, .docx, .pdf"   title="{{tooltips['trinhTuDNA']}}" name="trinhTuDNA" ng-model="data.trinhTuDNA" class="input-form"></td>
+					<td><input type="file" multiple multiple accept=".doc, .docx, .pdf"   title="{{tooltips['dinhKemTrinhTuDNA']}}" name="dinhKemTrinhTuDNA" ng-model="data.dinhKemTrinhTuDNA" class="input-form"></td>
 				</tr>
 				<tr>
 					<td>Công bố/thông tin quốc tế (genbank...)</td>
@@ -616,7 +616,7 @@
 				</tr>
 				<tr>
 					<td><label>63. Người lập phiếu mẫu vật <span class="has-required">(*)</span>:</label></td>
-					<td><input type="text" title="{{tooltips['nguoiNhapPhieuMauVat']}}" name="nguoiNhapPhieuMauVat" ng-model="data.nguoiNhapPhieuMauVat" class="input-form" required></td>
+					<td><input type="text" title="{{tooltips['nguoiLapPhieuMauVat']}}" name="nguoiLapPhieuMauVat" ng-model="data.nguoiLapPhieuMauVat" class="input-form" required></td>
 				</tr>
 				<tr>
 					<td><label>64. Người nhập thông tin vào phần mềm:</label></td>
