--- a/app/views/users/edit/edit-paleontological-form.template.html
+++ b/app/views/users/edit/edit-paleontological-form.template.html
@@ -81,7 +81,7 @@
 				</tr>
 				<tr>
 					<td>Chi/Giống: </td>
-					<td><input type="text" title="{{tooltips['chichiGiong']}}" name="chichiGiong" ng-model="data.chichiGiong" id="chichiGiong" class="input-form"></td>
+					<td><input type="text" title="{{tooltips['chiGiong']}}" name="chiGiong" ng-model="data.chiGiong" id="chiGiong" class="input-form"></td>
 				</tr>
 				<tr>
 					<td>Phân Chi/Phân Giống: </td>
