--- a/app/views/users/edit/edit-vegetable-form.template.html
+++ b/app/views/users/edit/edit-vegetable-form.template.html
@@ -86,7 +86,7 @@
 				</tr>
 				<tr>
 					<td>Chi <span class="has-required">(*)</span>:</td>
-					<td><input type="text" title="{{tooltips['chichiGiong']}}" name="chichiGiong" ng-model="data.chichiGiong" id="chichiGiong" class="input-form" required></td>
+					<td><input type="text" title="{{tooltips['chiGiong']}}" name="chiGiong" ng-model="data.chiGiong" id="chiGiong" class="input-form" required></td>
 				</tr>
 				<tr>
 					<td>Phân chi:</td>
