--- a/views/forgotPassword.ejs
+++ b/views/forgotPassword.ejs
@@ -4,7 +4,13 @@
     <title><%= title %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <% include header %>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+    <script src='https://www.google.com/recaptcha/api.js' async defer></script>
+    <script>
+      function onSubmit(token) {
+         document.getElementById("forgot-password-form").submit();
+      }
+    </script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script> -->
     <link rel="stylesheet" href="/stylesheets/checkbox.min.css">
     <style>
     #redirectBack{
@@ -14,20 +20,20 @@
     </style>
   </head>
 </head>
-<body ng-app="myApp">
-  <div class="container" ng-controller="myCtrl">
+<body>
+  <div class="container">
     <div class="col-xs-12 col-md-8 col-md-offset-2">
       <h4 class="">
       Forgot your password?
       </h4>
-      <form accept-charset="UTF-8" role="form" name="userForm" method="post" ng-submit="submitForm()" novalidate>
+      <form id="forgot-password-form" accept-charset="UTF-8" role="form" method="post" action="">
         <fieldset>
           <span class="help-block">
             Nhập email mà bạn dùng để đăng nhập.
             <br>
             Chúng tôi sẽ gửi cho bạn một email để đặt lại mật khẩu.
           </span>
-          <p style="color: red;">{{message}}</p>
+          <!-- <p style="color: red;">{{message}}</p> -->
 
           <div class="form-group input-group">
             <span class="input-group-addon">
@@ -35,9 +41,14 @@
             </span>
             <input class="form-control" placeholder="Email" name="email" type="email" ng-model="email" required="">
           </div>
-          <button type="submit" class="btn btn-primary" id="btn-olvidado">
-          Continue
-          </button>
+          <button
+            class="g-recaptcha btn btn-primary"
+            data-sitekey="<%= sitekey %>"
+            data-callback="onSubmit">
+            Continue
+            </button>
+            <!-- <div class="g-recaptcha" data-sitekey="6LcIqhoUAAAAAB7A32EMAGm_w2reK2BYZMNQEb6m"></div>
+            <button class="btn btn-primary" type="submit">Continue</button> -->
           <!-- <p class="help-block">
             <a class="text-muted" href="#" id="acceso"><small>Account Access</small></a>
           </p> -->
@@ -47,7 +58,7 @@
   </div>
 </body>
 </html>
-<script>
+<!-- <script>
 var app = angular.module('myApp', []);
 app.controller('myCtrl', function($scope, $http) {
     $scope.submitForm = function(){
@@ -69,4 +80,4 @@ app.controller('myCtrl', function($scope, $http) {
       console.log($scope.email);
     }
 });
-</script>
+</script> -->
