--- a/views/forgotPassword.ejs
+++ b/views/forgotPassword.ejs
@@ -7,6 +7,7 @@
     <script src='https://www.google.com/recaptcha/api.js' async defer></script>
     <script>
       function onSubmit(token) {
+        console.log(token);
          document.getElementById("forgot-password-form").submit();
       }
     </script>
@@ -24,7 +25,7 @@
   <div class="container">
     <div class="col-xs-12 col-md-8 col-md-offset-2">
       <h4 class="">
-      Forgot your password?
+      Quên mật khẩu?
       </h4>
       <form id="forgot-password-form" accept-charset="UTF-8" role="form" method="post" action="">
         <fieldset>
