--- a/views/forgotPassword.ejs
+++ b/views/forgotPassword.ejs
@@ -46,39 +46,12 @@
             class="g-recaptcha btn btn-primary"
             data-sitekey="<%= sitekey %>"
             data-callback="onSubmit">
-            Continue
-            </button>
-            <!-- <div class="g-recaptcha" data-sitekey="6LcIqhoUAAAAAB7A32EMAGm_w2reK2BYZMNQEb6m"></div>
-            <button class="btn btn-primary" type="submit">Continue</button> -->
-          <!-- <p class="help-block">
-            <a class="text-muted" href="#" id="acceso"><small>Account Access</small></a>
-          </p> -->
+            Tiếp tục
+          </button>
+            
         </fieldset>
       </form>
     </div>
   </div>
 </body>
 </html>
-<!-- <script>
-var app = angular.module('myApp', []);
-app.controller('myCtrl', function($scope, $http) {
-    $scope.submitForm = function(){
-      if($scope.userForm.$valid){
-        $http({
-            method : "POST",
-            url : "/auth/forgot-password",
-            data : {email : $scope.email}
-        }).then(function mySucces(res) {
-          // let data = JSON.parse(res.data);
-          $scope.message = res.data.message;
-        }, function myError(res) {
-            $scope.message = res.statusText + " - Có lỗi xảy ra!";
-        });
-      }
-      else {
-        $scope.message = 'Email bạn nhập không đúng rồi!';
-      }
-      console.log($scope.email);
-    }
-});
-</script> -->
