--- a/views/resetPassword.ejs
+++ b/views/resetPassword.ejs
@@ -18,7 +18,7 @@
   <div class="container" ng-controller="myCtrl">
     <div class="col-xs-12 col-md-8 col-md-offset-2">
       <h4 class="">
-      Forgot your password?
+      Đặt lại mật khẩu cho tại khoản <%= username %>
       </h4>
       <form accept-charset="UTF-8" role="form" name="userForm" method="post" ng-submit="submitForm()" novalidate>
         <fieldset>
@@ -29,21 +29,21 @@
           <p style="color: red;">{{message}}</p>
           
           <div class="form-group">
-            <label for="inputEmail3" class="col-sm-3 control-label">New Password</label>
+            <label for="inputEmail3" class="col-sm-3 control-label">Mật khẩu mới</label>
             <div class="col-sm-9">
               <input class="form-control" ng-model="new_password" type="password" name="new_password" required="">
             </div>
           </div>
           
           <div class="form-group">
-            <label for="inputPassword3" class="col-sm-3 control-label">Confirm Password</label>
+            <label for="inputPassword3" class="col-sm-3 control-label">Xác nhận mật khẩu</label>
             <div class="col-sm-9">
               <input class="form-control" ng-model="confirm_password" type="password" name="confirm_password" required="">
             </div>
           </div>
           <div class="form-group">
             <div class="col-sm-offset-3 col-sm-9">
-              <button type="submit" class="btn btn-primary">Change password</button>
+              <button type="submit" class="btn btn-primary">Đặt lại mật khẩu</button>
             </div>
           </div>
           
