fix add newMaDeTai

--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -420,6 +420,12 @@
 						<div id="passwordField">
 							<input type="password" placeholder="Mật khẩu" id="adminPassword" name="adminPassword" class="form-control" autocomplete="off" value="">
 						</div>
+						<div id="tenDeTaiField">
+							<input type="text" placeholder="Tên đề tài" name="tenDeTai" class="form-control" autocomplete="off" value="">
+						</div>
+						<div id="donViChuTriField">
+							<input type="text" placeholder="Đơn vị chủ trì" name="donViChuTri" class="form-control" autocomplete="off" value="">
+						</div>
 						<p>Lưu ý: Sau khi được thêm, mã đề tài này sẽ không thể bị xóa bỏ</p>
 					</form>
 				</div>
