--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -649,7 +649,7 @@
 			data: {
 				newMaDeTai: $('#inputNewMDT').val().trim(),
 				adminPassword: plainPass,
-				tenDeTai: $('#tenDeTai').val().trim()
+				tenDeTai: $('#tenDeTai').val().trim(),
 				donViChuTri: $('#donViChuTri').val().trim()
 			},
 			success: function (data) {
