--- a/views/manager/userpermissions.ejs
+++ b/views/manager/userpermissions.ejs
@@ -550,7 +550,7 @@
 <!-- AdminLTE for demo purposes -->
 <script src="/admin/dist/js/demo.js"></script>
 <!-- page script -->
-
+<script src='/javascripts/footer.js'></script>
 <script src="/javascripts/jtip.js"></script>
 
 <script>
