--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -471,7 +471,7 @@
 <!-- AdminLTE for demo purposes -->
 <script src="/admin/dist/js/demo.js"></script>
 <!-- page script -->
-
+<script src='/javascripts/footer.js'></script>
 <script type="text/javascript" src="/javascripts/flexdatalist/jquery.flexdatalist.min.js"></script>
 <!-- CryptoJS -->
 <script type="text/javascript" src="/javascripts/crypto-js.js"></script>
