disable maDeTai in FE

--- a/app/views/users/add-animal-form.template.html
+++ b/app/views/users/add-animal-form.template.html
@@ -7,7 +7,7 @@
 			<tr>
 				<td><label >Mã đề tài <span class="has-required"> (*)</span>: </label></td>
 				<td>
-					<input type="text" name="maDeTai" ng-model="data.maDeTai" class="input-form" required>
+					<input type="text" name="maDeTai" disabled="true" ng-model="data.maDeTai" class="input-form" required>
 				</td>
 			</tr>
 		</table>
