--- a/views/alte-custom-menu.ejs
+++ b/views/alte-custom-menu.ejs
@@ -4,7 +4,7 @@
 		<!-- User Account: style can be found in dropdown.less -->
 		<li class="dropdown user user-menu">
 			<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-				<img src="/admin/dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
+				<img src="<%= (('avatar' in user) && ('original' in user.avatar) && (user.avatar.original)) ? ('/' + user.avatar.original) : '/admin/dist/img/user4-128x128.jpg' %>" class="user-image" alt="User Image">
 				<span class="hidden-xs"><%= user.fullname %></span>
 			</a>
 			<ul class="dropdown-menu">
