--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -47,6 +47,7 @@
 						<li><a href="/log/all">Lịch sử</a></li>
 						<li><a href="/app/#!/bai-dang">Quản lý mẫu vật</a></li>
 						<li><a href="/admin">Quản lý tài khoản</a></li>
+						<li><a href="/users">Trang cá nhân</a></li>
 						<li><a href="/auth/logout">Đăng xuất</a></li>
 					</ul>
 				</li>
